tests/snapshots/run_wpt_conformance__litert_isNaN_float16_special_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
is_nan.https.any.js isNaN float16 special values, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: IsNaN { input: 0, options: Some(MLOperatorOptions { label: "" }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    isNaNInput: f16[7];
  }

  nodes {
    [isNaNOutput] = isNaN(isNaNInput, label="");
  }

  outputs { isNaNOutput; }
}
